--- a/SchoolWeb/Views/Users/RegisterUser.cshtml
+++ b/SchoolWeb/Views/Users/RegisterUser.cshtml
@@ -1,11 +1,11 @@
 ﻿@model SchoolWeb.Models.RegisterUserViewModel
 @{
-    ViewData["Title"] = "Register User";
+    ViewData["Title"] = "New User";
 }
 
 <br>
 <br>
-<h3 class="text-center">Register User</h3>
+<h3 class="text-center">New User</h3>
 <br>
 <div class="text-danger text-center">
     <p>
@@ -112,7 +112,7 @@
                 <div class="row">
                     <div class="col-md-4 offset-md-2">
                         <div class="form-group text-center">
-                            <input type="submit" value="Register User" class="btn btn-secondary" />
+                            <input type="submit" value="Save" class="btn btn-secondary" />
                         </div>
                         <div class="text-danger text-center mr-4" asp-validation-summary="ModelOnly"></div>
                     </div>
