--- a/SchoolWeb/Views/Accounts/ChangePassword.cshtml
+++ b/SchoolWeb/Views/Accounts/ChangePassword.cshtml
@@ -28,7 +28,7 @@
             </div>
             <br>
             <div class="form-group text-center">
-                <input type="submit" value="Change Password" class="btn btn-secondary" />
+                <input type="submit" value="Save" class="btn btn-secondary" />
             </div>
             <div class="col-md-4 offset-md-4 nav-item text-center">
                 <a asp-controller="Users" asp-action="EditOwnProfile" class="nav-link text-dark">Back</a>
