--- a/SchoolWeb/Views/Accounts/RecoverPassword.cshtml
+++ b/SchoolWeb/Views/Accounts/RecoverPassword.cshtml
@@ -18,7 +18,7 @@
             </div>
             <br>
             <div class="form-group text-center">
-                <input type="submit" value="Recover Password" class="btn btn-secondary" />
+                <input type="submit" value="Send" class="btn btn-secondary" />
             </div>
             <div class="text-danger text-center mr-4" asp-validation-summary="ModelOnly"></div>
         </form>
