--- a/SchoolWeb/Views/Accounts/ResetPassword.cshtml
+++ b/SchoolWeb/Views/Accounts/ResetPassword.cshtml
@@ -29,7 +29,7 @@
             </div>
             <br>
             <div class="form-group text-center">
-                <input type="submit" value="Reset Password" class="btn btn-secondary" />
+                <input type="submit" value="Reset" class="btn btn-secondary" />
             </div>
             <div class="text-danger text-center mr-4" asp-validation-summary="ModelOnly"></div>
         </form>
