--- a/SchoolWeb/Views/Home/Configurations.cshtml
+++ b/SchoolWeb/Views/Home/Configurations.cshtml
@@ -1,11 +1,12 @@
 ﻿@model SchoolWeb.Models.Configurations.ConfigurationsViewModel
 @{
-    ViewData["Title"] = "Configurations";
+    ViewData["Title"] = "Configuration";
 }
 
 <br>
 <br>
-<h3 class="text-center">Configurations</h3>
+<h3 class="text-center">Configuration</h3>
+<br>
 <br>
 <div class="row">
     <div class="col-md-4 offset-md-4">
@@ -22,7 +23,7 @@
             </div>
             <br>
             <div class="form-group text-center">
-                <input type="submit" value="Update" class="btn btn-secondary" />
+                <input type="submit" value="Save" class="btn btn-secondary" />
             </div>
             <div class="text-danger text-center mr-4" asp-validation-summary="ModelOnly"></div>
         </form>
