--- a/SchoolWeb/Views/Reports/AdminReportDetails.cshtml
+++ b/SchoolWeb/Views/Reports/AdminReportDetails.cshtml
@@ -43,43 +43,42 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td class="align-middle text-center">
+                                @if (Model != null)
+                                {
+                                    <td class="align-middle text-center">
+                                        @if (Model.Solved == true)
+                                        {
+                                            <i style="font-size: 28px; color: darkgreen;" class="fa">&#xf14a;</i>
+                                        }
+                                        else
+                                        {
+                                            <i style="font-size: 26px; color: darkred;" class="fa">&#xf071;</i>
+                                        }
+                                        </td>
+                                    <td class="align-middle">
+                                        @Model.Age
+                                    </td>
+                                    <td class="align-middle">
+                                        @Model.Title
+                                    </td>
+                                    <td class="align-middle">
+                                        @Model.User.FullName
+                                    </td>
+                                    <td class="align-middle">
+                                        @Model.Date.ToString("dd/MM/yyyy")
+                                    </td>
+                                    <td class="align-middle">
+                                        @if (Model.Solved == true)
+                                        {
+                                            @Model.SolvedDate.ToString().Split(" ")[0]
 
-                                    @if (Model.Solved == true)
-                                    {
-                                        <i style="font-size: 28px; color: darkgreen;" class="fa">&#xf14a;</i>
-                                    }
-                                    else
-                                    {
-                                        <i style="font-size: 26px; color: darkred;" class="fa">&#xf071;</i>
-                                    }
-
-                                </td>
-                                <td class="align-middle">
-                                    @Model.Age
-                                </td>
-                                <td class="align-middle">
-                                    @Model.Title
-                                </td>
-                                <td class="align-middle">
-                                    @Model.User.FullName
-                                </td>
-                                <td class="align-middle">
-                                    @Model.Date.ToString("dd/MM/yyyy")
-                                </td>
-                                <td class="align-middle">
-
-                                    @if (Model.Solved == true)
-                                    {
-                                        @Model.SolvedDate.ToString().Split(" ")[0]
-
-                                    }
-                                    else
-                                    {
-                                        <div>Pending</div>
-                                    }
-
-                                </td>
+                                        }
+                                        else
+                                        {
+                                            <div>Pending</div>
+                                        }
+                                    </td>
+                                }
                             </tr>
                         </tbody>
                     </table>
@@ -94,7 +93,6 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group text-center">
-
                                 @if (Model.Solved == true)
                                 {
                                     <input type="submit" value="Solved" class="btn btn-success" disabled="disabled" />
@@ -103,7 +101,6 @@
                                 {
                                     <input type="submit" value="Solved" class="btn btn-success" />
                                 }
-
                             </div>
                             <div class="col-md-2 offset-md-5 nav-item text-center">
                                 <a asp-action="AdminIndexReports" class="nav-link text-dark">Back</a>
