--- a/SchoolWeb/Views/Reports/StaffNewReport.cshtml
+++ b/SchoolWeb/Views/Reports/StaffNewReport.cshtml
@@ -27,13 +27,12 @@
                     </div>
                 </div>
             </div>
-
             <br>
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 offset-md-2">
                         <div class="form-group text-center">
-                            <input type="submit" value="Submit" class="btn btn-secondary" />
+                            <input type="submit" value="Save" class="btn btn-secondary" />
                         </div>
                         <div class="col-md-4 offset-md-4 nav-item text-center">
                             <a asp-action="StaffIndexReports" class="nav-link text-dark">Back</a>
