--- a/SchoolWeb/Views/Reports/StaffReportDetails.cshtml
+++ b/SchoolWeb/Views/Reports/StaffReportDetails.cshtml
@@ -37,43 +37,42 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td class="align-middle text-center">
+                            @if (Model != null)
+                            {
+                                <td class="align-middle text-center">
+                                    @if (Model.Solved == true)
+                                    {
+                                        <i style="font-size: 28px; color: darkgreen;" class="fa">&#xf14a;</i>
+                                    }
+                                    else
+                                    {
+                                        <i style="font-size: 26px; color: darkred;" class="fa">&#xf071;</i>
+                                    }
+                                </td>
+                                <td class="align-middle">
+                                    @Model.Age
+                                </td>
+                                <td class="align-middle">
+                                    @Model.Title
+                                </td>
+                                <td class="align-middle">
+                                    @Model.User.FullName
+                                </td>
+                                <td class="align-middle">
+                                    @Model.Date.ToString("dd/MM/yyyy")
+                                </td>
+                                <td class="align-middle">
+                                    @if (Model.Solved == true)
+                                    {
+                                        @Model.SolvedDate.ToString().Split(" ")[0]
 
-                                @if (Model.Solved == true)
-                                {
-                                    <i style="font-size: 28px; color: darkgreen;" class="fa">&#xf14a;</i>
-                                }
-                                else
-                                {
-                                    <i style="font-size: 26px; color: darkred;" class="fa">&#xf071;</i>
-                                }
-
-                            </td>
-                            <td class="align-middle">
-                                @Model.Age
-                            </td>
-                            <td class="align-middle">
-                                @Model.Title
-                            </td>
-                            <td class="align-middle">
-                                @Model.User.FullName
-                            </td>
-                            <td class="align-middle">
-                                @Model.Date.ToString("dd/MM/yyyy")
-                            </td>
-                            <td class="align-middle">
-
-                                @if (Model.Solved == true)
-                                {
-                                    @Model.SolvedDate.ToString().Split(" ")[0]
-
-                                }
-                                else
-                                {
-                                    <div>Pending</div>
-                                }
-
-                            </td>
+                                    }
+                                    else
+                                    {
+                                        <div>Pending</div>
+                                    }
+                                </td>
+                            }
                         </tr>
                     </tbody>
                 </table>
