--- a/SchoolWeb/Views/Users/RegisterStudent.cshtml
+++ b/SchoolWeb/Views/Users/RegisterStudent.cshtml
@@ -1,11 +1,11 @@
 ﻿@model SchoolWeb.Models.RegisterStudentViewModel
 @{
-    ViewData["Title"] = "Register Student";
+    ViewData["Title"] = "New Student";
 }
 
 <br>
 <br>
-<h3 class="text-center">Register Student</h3>
+<h3 class="text-center">New Student</h3>
 <br>
 <div class="text-danger text-center">
     <p>
@@ -114,7 +114,7 @@
                 <div class="row">
                     <div class="col-md-4 offset-md-2">
                         <div class="form-group text-center">
-                            <input type="submit" value="Register Student" class="btn btn-secondary" />
+                            <input type="submit" value="Save" class="btn btn-secondary" />
                         </div>
                         <div class="text-danger text-center mr-4" asp-validation-summary="ModelOnly"></div>
                     </div>
