--- a/SchoolWeb/Views/Shared/_Layout.cshtml
+++ b/SchoolWeb/Views/Shared/_Layout.cshtml
@@ -82,7 +82,7 @@
                         {
                             <li class="nav-item">
                                 <a asp-controller="Users" asp-action="EditOwnProfile">
-                                    <img src="@Url.Content(TempData.Peek("SessionUserProfilePicture").ToString())" alt="Image" class="rounded-circle" style="vertical-align: middle; width: 44px; height: 44px;  max-height: 100%; width: auto;" />
+                                    <img src="@Url.Content(TempData.Peek("SessionUserProfilePicture").ToString())" alt="Image" class="rounded-circle" style="vertical-align: middle; width: 44px; height: 44px;" />
                                 </a>
                             </li>
                             <li class="nav-item">
