--- a/SchoolWeb/Views/Users/EditUserProfile.cshtml
+++ b/SchoolWeb/Views/Users/EditUserProfile.cshtml
@@ -21,7 +21,7 @@
                     <div class="form-group col-md-4">
                         <div class="container">
                             <div class="row justify-content-center">
-                                <img src="@Url.Content(Model.ProfilePicturePath)" alt="Image" class="rounded-circle embed-responsive" style="width: 160px; height: 160px; max-height: 100%; width: auto;" />
+                                <img src="@Url.Content(Model.ProfilePicturePath)" alt="Image" class="rounded-circle embed-responsive" style="width: 160px; height: 160px;" />
                             </div>
                             <br>
                             <div class="row justify-content-center">
