--- a/SchoolWeb/Views/Accounts/ChangePassword.cshtml
+++ b/SchoolWeb/Views/Accounts/ChangePassword.cshtml
@@ -37,6 +37,12 @@
         </form>
     </div>
 </div>
+<br>
+<div class="text-danger text-center">
+    <p>
+        @Html.Raw(ViewBag.Message)
+    </p>
+</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
