--- a/SchoolWeb/Views/Users/EditStudents.cshtml
+++ b/SchoolWeb/Views/Users/EditStudents.cshtml
@@ -82,6 +82,13 @@
         </div>
     </div>
 </div>
+<br>
+<div class="text-success text-center">
+    <p>
+        @Html.Raw(ViewBag.Message)
+    </p>
+</div>
+
 
 <div id="deleteDialog" class="modal fade">
     <div class="modal-dialog modal-sm">
