--- a/SchoolWeb/Views/CourseDisciplines/StaffIndexCourses.cshtml
+++ b/SchoolWeb/Views/CourseDisciplines/StaffIndexCourses.cshtml
@@ -1,20 +1,20 @@
-﻿@model IEnumerable<SchoolWeb.Models.Disciplines.DisciplinesViewModel>
+﻿@model IEnumerable<SchoolWeb.Models.Courses.CoursesViewModel>
 @{
-    ViewData["Title"] = "Disciplines";
+    ViewData["Title"] = "Courses";
 }
 
 <link href="~/lib/datatables.net-bs4/dataTables.bootstrap4.min.css" rel="stylesheet" />
 
 <br>
 <br>
-<h3 class="text-center">Disciplines</h3>
+<h3 class="text-center">Courses</h3>
 <br>
 <br>
 <div class="row">
     <div class="col-md-12">
         <div class="row justify-content-center">
             <div class="col-auto">
-                <table class="table table-hover table-responsive table-striped" id="AdminIndexDisciplines">
+                <table class="table table-hover table-responsive table-striped" id="StaffIndexCourses">
                     <thead>
                         <tr>
                             <th>
@@ -52,9 +52,7 @@
                                         @Html.DisplayFor(modelItem => item.Duration) Hours
                                     </td>
                                     <td id="@item.Id" class="align-middle">
-                                        <a asp-action="EditDiscipline" asp-route-id="@item.Id" class="btn btn-secondary btn-sm">Edit</a>
-                                        &nbsp
-                                        <a asp-action="DeleteDiscipline" asp-route-id="@item.Id" class="btn btn-light btn-outline-danger btn-sm" id="btnDeleteItem">Delete</a>
+                                        <a asp-action="DetailsCourseDisciplines" asp-route-id="@item.Id" class="btn btn-secondary btn-sm">Details</a>
                                     </td>
                                 </tr>
                             }
@@ -63,37 +61,9 @@
                 </table>
             </div>
         </div>
-        <br>
-        <br>
-        <div class="form-group text-center">
-            <a asp-action="RegisterDiscipline" class="btn btn-secondary">New Discipline</a>
-        </div>
     </div>
 </div>
 <br>
-<div class="text-success text-center">
-    <p>
-        @Html.Raw(ViewBag.Message)
-    </p>
-</div>
-
-<div id="deleteDialog" class="modal fade">
-    <div class="modal-dialog modal-sm">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title">Delete</h4>
-                <button type="button" class="close" data-dismiss="modal"><i class="fa fa-window-close"></i></button>
-            </div>
-            <div class="modal-body">
-                <p>Are you sure?</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" id="btnYesDelete">Yes</button>
-                <button type="button" class="btn btn-secondary" id="btnNoDelete">No</button>
-            </div>
-        </div>
-    </div>
-</div>
 
 @section Scripts{
 
@@ -102,7 +72,7 @@
 
     <script type="text/javascript">
         $(document).ready(function () {
-            $('#AdminIndexDisciplines').DataTable({
+            $('#StaffIndexCourses').DataTable({
                 responsive: true,
                 columnDefs: [{
                     "targets": [4],
@@ -110,24 +80,6 @@
                     "searchable": false
                 }],
                 order: [[1, 'asc']]
-            });
-        });
-    </script>
-
-    <script type="text/javascript">
-        $(document).ready(function () {
-            var id = 0;
-            $("a[id*=btnDeleteItem]").click(function () {
-                id = $(this).parent()[0].id;
-                $("#deleteDialog").modal("show");
-                return false;
-            });
-            $("#btnNoDelete").click(function () {
-                $("#deleteDialog").modal("hide");
-                return false;
-            });
-            $("#btnYesDelete").click(function () {
-                window.location.href = "/Disciplines/DeleteDiscipline/" + id;
             });
         });
     </script>
