--- a/SchoolWeb/Views/Users/EditUsers.cshtml
+++ b/SchoolWeb/Views/Users/EditUsers.cshtml
@@ -76,6 +76,12 @@
         </div>
     </div>
 </div>
+<br>
+<div class="text-success text-center">
+    <p>
+        @Html.Raw(ViewBag.Message)
+    </p>
+</div>
 
 <div id="deleteDialog" class="modal fade">
     <div class="modal-dialog modal-sm">
