--- a/SchoolWeb/Views/Reports/AdminIndexReports.cshtml
+++ b/SchoolWeb/Views/Reports/AdminIndexReports.cshtml
@@ -55,7 +55,7 @@
                                             <i style="font-size: 26px; color: darkred;" class="fa">&#xf071;</i>
                                         }
                                     </td>
-                                    <td class="align-middle">
+                                    <td class="align-middle font-weight-bold">
                                         @Html.DisplayFor(modelItem => item.Age)
                                     </td>
                                     <td class="align-middle">
