--- a/SchoolWeb/Views/Shared/_Layout.cshtml
+++ b/SchoolWeb/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">School</a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" asp-area="" asp-controller="CourseDisciplines" asp-action="StaffIndexCourses">Courses</a></li>
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Classes" asp-action="">Classes</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Classes" asp-action="StaffIndexClasses">Classes</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
