--- a/SchoolWeb/Views/Classes/StaffIndexClasses.cshtml
+++ b/SchoolWeb/Views/Classes/StaffIndexClasses.cshtml
@@ -1,20 +1,20 @@
-﻿@model IEnumerable<SchoolWeb.Models.Courses.CoursesViewModel>
+﻿@model IEnumerable<SchoolWeb.Models.Classes.ClassesViewModel>
 @{
-    ViewData["Title"] = "Courses";
+    ViewData["Title"] = "Classes";
 }
 
 <link href="~/lib/datatables.net-bs4/dataTables.bootstrap4.min.css" rel="stylesheet" />
 
 <br>
 <br>
-<h3 class="text-center">Courses</h3>
+<h3 class="text-center">Classes</h3>
 <br>
 <br>
 <div class="row">
     <div class="col-md-12">
         <div class="row justify-content-center">
             <div class="col-auto">
-                <table class="table table-hover table-responsive table-striped" id="StaffIndexCourses">
+                <table class="table table-hover table-responsive table-striped" id="StaffIndexClasses">
                     <thead>
                         <tr>
                             <th>
@@ -24,10 +24,13 @@
                                 @Html.DisplayNameFor(model => model.Name)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.Area)
+                                @Html.DisplayNameFor(model => model.Course)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.Duration)
+                                @Html.DisplayNameFor(model => model.StartDate)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.EndDate)
                             </th>
                             <th>
                             </th>
@@ -46,13 +49,18 @@
                                         @Html.DisplayFor(modelItem => item.Name)
                                     </td>
                                     <td class="align-middle">
-                                        @Html.DisplayFor(modelItem => item.Area)
+                                        @Html.DisplayFor(modelItem => item.Course.Name)
                                     </td>
                                     <td class="align-middle">
-                                        @Html.DisplayFor(modelItem => item.Duration) Hours
+                                        @Html.DisplayFor(modelItem => item.StartDate)
+                                    </td>
+                                    <td class="align-middle">
+                                        @Html.DisplayFor(modelItem => item.EndDate)
                                     </td>
                                     <td id="@item.Id" class="align-middle">
-                                        <a asp-action="DetailsCourseDisciplines" asp-route-id="@item.Id" class="btn btn-secondary btn-sm">Disciplines</a>
+                                        <a asp-action="EditClass" asp-route-id="@item.Id" class="btn btn-secondary btn-sm">Edit</a>
+                                        &nbsp
+                                        <a asp-controller="ClassStudents" asp-action="StaffIndexClassStudents" asp-route-id="@item.Id" class="btn btn-secondary btn-sm">Students</a>
                                     </td>
                                 </tr>
                             }
@@ -61,9 +69,19 @@
                 </table>
             </div>
         </div>
+        <br>
+        <br>
+        <div class="form-group text-center">
+            <a asp-action="RegisterClass" class="btn btn-secondary">New Class</a>
+        </div>
     </div>
 </div>
 <br>
+<div class="text-success text-center">
+    <p>
+        @Html.Raw(ViewBag.Message)
+    </p>
+</div>
 
 @section Scripts{
 
@@ -72,14 +90,20 @@
 
     <script type="text/javascript">
         $(document).ready(function () {
-            $('#StaffIndexCourses').DataTable({
+            $('#StaffIndexClasses').DataTable({
                 responsive: true,
                 columnDefs: [{
-                    "targets": [4],
+                    "targets": [5],
                     "orderable": false,
-                    "searchable": false
+                    "searchable": false,
+                    targets: [2],
+                    render: function (data, type, row) {
+                        return data.length > 23 ?
+                            data.substr(0, 23) + '…' :
+                            data;
+                    }
                 }],
-                order: [[1, 'asc']]
+                order: [[0, 'asc']]
             });
         });
     </script>
