--- a/SchoolWeb/Views/CourseDisciplines/EditCourseDisciplines.cshtml
+++ b/SchoolWeb/Views/CourseDisciplines/EditCourseDisciplines.cshtml
@@ -44,7 +44,7 @@
                                 @for (int i = 0; i < Model.DisciplinesSelectable.Count(); i++)
                                 {
                                     <tr>
-                                        <td class="align-middle">
+                                        <td class="align-middle font-weight-bold">
                                             <input type="hidden" asp-for="@Model.DisciplinesSelectable[i].Id" />
                                             @Html.DisplayFor(modelItem => @Model.DisciplinesSelectable[i].Code)
                                         </td>
