--- a/SchoolWeb/Views/Disciplines/AdminIndexDisciplines.cshtml
+++ b/SchoolWeb/Views/Disciplines/AdminIndexDisciplines.cshtml
@@ -39,7 +39,7 @@
                             @foreach (var item in Model)
                             {
                                 <tr>
-                                    <td class="align-middle">
+                                    <td class="align-middle font-weight-bold">
                                         @Html.DisplayFor(modelItem => item.Code)
                                     </td>
                                     <td class="align-middle">
