--- a/SchoolWeb/Views/Reports/StaffReportDetails.cshtml
+++ b/SchoolWeb/Views/Reports/StaffReportDetails.cshtml
@@ -49,7 +49,7 @@
                                         <i style="font-size: 26px; color: darkred;" class="fa">&#xf071;</i>
                                     }
                                 </td>
-                                <td class="align-middle">
+                                <td class="align-middle font-weight-bold">
                                     @Model.Age
                                 </td>
                                 <td class="align-middle">
