--- a/SchoolWeb/Views/ClassStudents/StaffIndexClassStudents.cshtml
+++ b/SchoolWeb/Views/ClassStudents/StaffIndexClassStudents.cshtml
@@ -1,7 +1,108 @@
-﻿
+﻿@model SchoolWeb.Models.ClassStudents.EditClassStudentsViewModel
 @{
-    ViewData["Title"] = "StaffIndexClassStudents";
+    ViewData["Title"] = "Class Students";
 }
 
-<h1>StaffIndexClassStudents</h1>
+<link href="~/lib/datatables.net-bs4/dataTables.bootstrap4.min.css" rel="stylesheet" />
 
+<br>
+<br>
+<h3 class="text-center">Class Students</h3>
+<br>
+<br>
+<div class="row">
+    <div class="col-md-12">
+        <div class="row justify-content-center">
+            <div class="col-auto">
+                <input asp-for="ClassName" class="form-control font-weight-bold bg-secondary" style="height: 3rem; color: white;" disabled="disabled" />
+                <br>
+                <table class="table table-hover table-responsive table-striped" id="ClassStudentsTable">
+                    <thead>
+                        <tr>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Students.FirstOrDefault().ProfilePicturePath)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Students.FirstOrDefault().FullName)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Students.FirstOrDefault().Age)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Students.FirstOrDefault().City)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Students.FirstOrDefault().PhoneNumber)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Students.FirstOrDefault().Email)
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @if (Model != null)
+                        {
+                            @foreach (var item in Model.Students)
+                            {
+                                <tr>
+                                    <td class="align-middle">
+                                        <img src="@Url.Content(item.ProfilePicturePath)" alt="Image" class="rounded-circle" style="width: 44px; height: 44px;  max-height: 100%; width: auto;" />
+                                    </td>
+                                    <td class="align-middle">
+                                        @Html.DisplayFor(modelItem => item.FullName)
+                                    </td>
+                                    <td class="align-middle">
+                                        @Html.DisplayFor(modelItem => item.Age)
+                                    </td>
+                                    <td class="align-middle">
+                                        @Html.DisplayFor(modelItem => item.City)
+                                    </td>
+                                    <td class="align-middle">
+                                        @Html.DisplayFor(modelItem => item.PhoneNumber)
+                                    </td>
+                                    <td class="align-middle">
+                                        @Html.DisplayFor(modelItem => item.Email)
+                                    </td>
+                                </tr>
+                            }
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="form-group text-center">
+            <a asp-action="EditClassStudents" asp-route-id="@Model.ClassId" class="btn btn-secondary">Edit</a>
+        </div>
+        <div class="col-md-2 offset-md-5 nav-item text-center">
+            <a asp-controller="Classes" asp-action="StaffIndexClasses" class="nav-link text-dark">Back</a>
+        </div>
+    </div>
+</div>
+<br>
+<div class="text-success text-center">
+    <p>
+        @Html.Raw(ViewBag.Message)
+    </p>
+</div>
+
+@section Scripts{
+
+    <script src="~/lib/datatables.net/jquery.dataTables.min.js"></script>
+    <script src="~/lib/datatables.net-bs4/dataTables.bootstrap4.min.js"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#ClassStudentsTable').DataTable({
+                responsive: true,
+                columnDefs: [{
+                    "targets": [0],
+                    "orderable": false,
+                    "searchable": false
+                }],
+                order: [[1, 'asc']]
+            });
+        });
+    </script>
+}
