Absences Controller and support

--- a/SchoolWeb/Views/Shared/_Layout.cshtml
+++ b/SchoolWeb/Views/Shared/_Layout.cshtml
@@ -65,8 +65,8 @@
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Users" asp-action="RegisterStudent">New</a></li>
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Users" asp-action="EditStudents">Edit</a></li>
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Evaluations" asp-action="">Evaluation</a></li>
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Absences" asp-action="">Absences</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Absences" asp-action="RegisterAbsenceClasses">Absences</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Evaluations" asp-action="">Evaluations</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
