--- a/SchoolWeb/Views/ClassStudents/EditClassStudents.cshtml
+++ b/SchoolWeb/Views/ClassStudents/EditClassStudents.cshtml
@@ -45,7 +45,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            @if (Model != null)
+                            @if (Model.StudentsSelectable != null)
                             {
                                 @for (int i = 0; i < Model.StudentsSelectable.Count(); i++)
                                 {
@@ -55,7 +55,7 @@
                                             <img src="@Url.Content(@Model.StudentsSelectable[i].ProfilePicturePath)" alt="Image" class="rounded-circle" style="width: 44px; height: 44px;  max-height: 100%; width: auto;" />
                                         </td>
                                         <td class="align-middle">
-                                            @Html.DisplayFor(modelItem => @Model.StudentsSelectable[i].FullName)
+                                            @Html.DisplayFor(modelItem => Model.StudentsSelectable[i].FullName)
                                         </td>
                                         <td class="align-middle">
                                             @Html.DisplayFor(modelItem => Model.StudentsSelectable[i].Age)
