--- a/SchoolWeb/Views/CourseDisciplines/EditCourseDisciplines.cshtml
+++ b/SchoolWeb/Views/CourseDisciplines/EditCourseDisciplines.cshtml
@@ -39,7 +39,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            @if (Model != null)
+                            @if (Model.DisciplinesSelectable != null)
                             {
                                 @for (int i = 0; i < Model.DisciplinesSelectable.Count(); i++)
                                 {
